[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-claude-code"
version = "0.1.0"
description = "LangChain integration for Claude Code - use your Claude Pro/Max subscription as a LangChain ChatModel"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Chamaru Amasara", email = "chamaru@donely.ai" },
]
keywords = ["langchain", "claude", "anthropic", "oauth", "claude-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "langchain-core>=0.3.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
cli = ["claude-code-sdk>=0.0.20"]
all = ["claude-code-sdk>=0.0.20"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "langchain-core>=0.3.0",
    "claude-code-sdk>=0.0.20",
]

[project.urls]
Homepage = "https://github.com/ChamaruAmasara/langchain-claude-code"
Repository = "https://github.com/ChamaruAmasara/langchain-claude-code"
Issues = "https://github.com/ChamaruAmasara/langchain-claude-code/issues"

[tool.hatch.build.targets.wheel]
packages = ["langchain_claude_code"]
